--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@ Data Collection/data/
 Data Collection/prePrcessedData/
 Data Collection/analysis/
 Data Collection/Bicoin Daily/
+ProboAPI/Bitcoin/
 
 Data Collection/__pycache__
 Live Trading/__pycache__
 Manual Trading/__pycache__
 Testing/utility/__pycache__
-
+ProboAPI/__pycache__
 .env
