Closing the project for now, will continue after some months

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Data Collection/__pycache__
 Live Trading/__pycache__
 Manual Trading/__pycache__
 Testing/utility/__pycache__
+ProboAPI/utility/__pycache__
 ProboAPI/__pycache__
 .env
 
