Minor Fixes in LastMinuteBuyYes, this should be working

--- a/ProboAPI/youtubeTrading/config.json
+++ b/ProboAPI/youtubeTrading/config.json
@@ -1,12 +1,36 @@
 {
-    "CTRL - Official Trailer": {
-        "video_id": "KEfeMPGj-Dw",
-        "history_view_rate": [],
-        "history_views": []
-    },
-    "Linkin Park - Heavy Is The Crown": {
-        "video_id": "5FrhtahQiRc",
-        "history_view_rate": [],
-        "history_views": []
+    "MrBeast - 100 Identical Twins": {
+        "video_id": "snX5YyflrGw",
+        "history_view_rate": [
+            {
+                "02:50 AM": 22948
+            },
+            {
+                "02:55 AM": 29812
+            },
+            {
+                "03:00 AM": 35465
+            },
+            {
+                "03:05 AM": 26786
+            }
+        ],
+        "history_views": [
+            {
+                "02:45 AM": 60864943
+            },
+            {
+                "02:50 AM": 60887891
+            },
+            {
+                "02:55 AM": 60917703
+            },
+            {
+                "03:00 AM": 60953168
+            },
+            {
+                "03:05 AM": 60979954
+            }
+        ]
     }
 }
