minor fixes and log files.

--- a/ProboAPI/youtubeTrading/config.json
+++ b/ProboAPI/youtubeTrading/config.json
@@ -1,234 +1,7 @@
 {
-    "MrBeast - 100 Identical Twins": {
-        "video_id": "snX5YyflrGw",
-        "history_view_rate": [
-            {
-                "02:50 AM": 22948
-            },
-            {
-                "02:55 AM": 29812
-            },
-            {
-                "03:00 AM": 35465
-            },
-            {
-                "03:05 AM": 26786
-            },
-            {
-                "03:10 AM": 16189
-            },
-            {
-                "03:15 AM": 21698
-            },
-            {
-                "03:19 AM": 24840
-            },
-            {
-                "03:24 AM": 24267
-            },
-            {
-                "03:29 AM": 25280
-            },
-            {
-                "03:34 AM": 17646
-            },
-            {
-                "03:39 AM": 16887
-            },
-            {
-                "03:44 AM": 20359
-            },
-            {
-                "03:48 AM": 17445
-            },
-            {
-                "03:53 AM": 3202
-            },
-            {
-                "03:58 AM": 28308
-            },
-            {
-                "04:03 AM": 31787
-            },
-            {
-                "04:08 AM": 17968
-            },
-            {
-                "04:13 AM": 12707
-            },
-            {
-                "04:17 AM": 12350
-            },
-            {
-                "04:22 AM": 14870
-            },
-            {
-                "04:25 AM": 24648
-            },
-            {
-                "04:33 AM": 25979
-            },
-            {
-                "04:37 AM": 27090
-            },
-            {
-                "04:42 AM": 23960
-            },
-            {
-                "04:47 AM": 12476
-            },
-            {
-                "04:52 AM": 25776
-            },
-            {
-                "04:57 AM": 36128
-            },
-            {
-                "05:02 AM": 14866
-            },
-            {
-                "05:06 AM": 15555
-            },
-            {
-                "05:11 AM": 18194
-            },
-            {
-                "05:16 AM": 10181
-            },
-            {
-                "05:21 AM": 19141
-            },
-            {
-                "05:26 AM": 31951
-            },
-            {
-                "05:31 AM": 24693
-            },
-            {
-                "05:35 AM": 18411
-            },
-            {
-                "05:40 AM": 17461
-            },
-            {
-                "05:45 AM": 13487
-            }
-        ],
-        "history_views": [
-            {
-                "02:45 AM": 60864943
-            },
-            {
-                "02:50 AM": 60887891
-            },
-            {
-                "02:55 AM": 60917703
-            },
-            {
-                "03:00 AM": 60953168
-            },
-            {
-                "03:05 AM": 60979954
-            },
-            {
-                "03:10 AM": 60996143
-            },
-            {
-                "03:15 AM": 61017841
-            },
-            {
-                "03:19 AM": 61042681
-            },
-            {
-                "03:24 AM": 61066948
-            },
-            {
-                "03:29 AM": 61092228
-            },
-            {
-                "03:34 AM": 61109874
-            },
-            {
-                "03:39 AM": 61126761
-            },
-            {
-                "03:44 AM": 61147120
-            },
-            {
-                "03:48 AM": 61164565
-            },
-            {
-                "03:53 AM": 61167767
-            },
-            {
-                "03:58 AM": 61196075
-            },
-            {
-                "04:03 AM": 61227862
-            },
-            {
-                "04:08 AM": 61245830
-            },
-            {
-                "04:13 AM": 61258537
-            },
-            {
-                "04:17 AM": 61270887
-            },
-            {
-                "04:22 AM": 61285757
-            },
-            {
-                "04:25 AM": 61310405
-            },
-            {
-                "04:33 AM": 61336384
-            },
-            {
-                "04:37 AM": 61363474
-            },
-            {
-                "04:42 AM": 61387434
-            },
-            {
-                "04:47 AM": 61399910
-            },
-            {
-                "04:52 AM": 61425686
-            },
-            {
-                "04:57 AM": 61461814
-            },
-            {
-                "05:02 AM": 61476680
-            },
-            {
-                "05:06 AM": 61492235
-            },
-            {
-                "05:11 AM": 61510429
-            },
-            {
-                "05:16 AM": 61520610
-            },
-            {
-                "05:21 AM": 61539751
-            },
-            {
-                "05:26 AM": 61571702
-            },
-            {
-                "05:31 AM": 61596395
-            },
-            {
-                "05:35 AM": 61614806
-            },
-            {
-                "05:40 AM": 61632267
-            },
-            {
-                "05:45 AM": 61645754
-            }
-        ]
+    "Kabhi Main Kabhi Tum - Ep 33": {
+        "video_id": "EiNlWJfXKlU",
+        "history_view_rate": [],
+        "history_views": []
     }
 }
